# datashape

./: .binstar.yml  .gitattributes  .gitignore  .travis.yml  CNAME  LICENSE  MANIFEST.in  README.md  README.rst  conda.yaml  genindex.html  grammar.html  index.html  objects.inv  overview.html  pattern_matching.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  types.html
_sources/: grammar.txt  index.txt  overview.txt  pattern_matching.txt  types.txt
_static/: searchtools.js
conda.recipe/: bld.bat  build.sh  meta.yaml
datashape/: __init__.py  _version.py  coercion.py  coretypes.py  discovery.py  dlex.py  dyacc.py  error.py  internal_utils.py  json.py  jsonio.py  lexer.py  normalization.py  old_parser.py  overload_resolver.py  overloading.py  parser.py  predicates.py  promote.py  promotion.py  py2help.py  traversal.py  type_equation_solver.py  type_symbol_table.py  typesets.py  unification.py  user.py  util.py  utils.py  validation.py
datashape/parser_redo/: __init__.py  lexer.py  parser.py
datashape/tests/: common.py  test_coercion.py  test_coretypes.py  test_creation.py  test_datashape_coercion.py  test_datashape_normalization.py  test_datashape_operations.py  test_datashape_parser.py  test_datashape_str.py  test_discovery.py  test_ds_lexer.py  test_json.py  test_jsonio.py  test_lexer.py  test_normalization.py  test_old_parser.py  test_operations.py  test_overloading.py  test_parser.py  test_predicates.py  test_promote.py  test_promotion.py  test_str.py  test_type_constructor.py  test_type_equation_solver.py  test_unification.py  test_user.py  test_util.py
datashape/util/: __init__.py  testing.py
datashape/util/tests/: test_testing.py
docs/: Makefile  make.bat
docs/source/: conf.py  dattr_dloc.rst  grammar.rst  index.rst  overview.rst  pattern_matching.rst  releases.rst  types.rst
docs/source/whatsnew/: 0.4.7.txt  0.4.8.txt  0.5.0.txt  0.5.1.txt  0.5.2.txt  0.5.3.txt  0.5.4.txt
