[metadata]
name = datashape
author = Continuum Analytics
author_email = blaze-dev@continuum.io
license = BSD-2-Clause
description = A data description language.
keywords = data, language
url = https://github.com/blaze/datashape
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    License :: OSI Approved :: BSD License
project_urls =
    Source Code = https://github.com/blaze/datashape
    Bug Tracker = https://github.com/blaze/datashape/issues
    Documentation = https://datashape.readthedocs.io/en/latest/

[options]
packages =
    datashape
    datashape.util
    datashape.tests
zip_safe = False
install_requires =
    numpy >= 1.7
    multipledispatch >= 0.4.7
    python-dateutil

[versioneer]
VCS = git
style = pep440
versionfile_source = datashape/_version.py
versionfile_build = datashape/_version.py
tag_prefix =
parentdir_prefix = datashape-

